@@ -43,6 +43,7 @@ Data Changes:
 - Removed the Advanced Ritual Casting requirement from Attune Item and Empower rituals. Closes #4277
 - Added separate [Custom Cyberdeck] Firewall gear item for Fuchi Cyber-N.
 - Corrected a few mentor spirit bonus texts that did not have spaces after colons.
+- Added customdata to allow the weapon mounts from Rigger 5 to mount Sporting Rifles. Closes #4287
 
 Changed/New Strings:
 - MessageTitle_AutosaveFound
